Prevent overflow from causing scroll on mobile
These __bg-wrapper already have negative margins left/right to pull them out to the edge of the page.  This prevents anything from falling off the page, also preventing a left right scroll bar.

--- a/packages/rigdig/scss/rigdig.scss
+++ b/packages/rigdig/scss/rigdig.scss
@@ -52,6 +52,7 @@ $wrapper-border-radius: 10px !default;
     margin-right: auto;
     background-color: #f0f1f2;
     border-radius: $wrapper-border-radius;
+    overflow: hidden;
     margin-bottom: 30px;
     margin-top: 30px;
     position: relative;
